--- a/index.html
+++ b/index.html
@@ -24,11 +24,7 @@
           alt="pattern-divider"
         />
         <div class="random__advice">
-          <img
-            height="20rem"
-            src="./assests//images/icon-dice.svg"
-            alt="icon-dice"
-          />
+          <img src="./assests//images/icon-dice.svg" alt="icon-dice" />
         </div>
       </div>
     </main>
